# prism_loc

./: .gitignore  CITATION.cff  PARAMS.md  README.md  SPEC.md  SPEC_fusion.md  TROUBLESHOOTING.md
.github/workflows/: ci.yml
docs/paper/: main.tex  references.bib  related_work.tex
docs/paper/sections/: architecture.tex  cores.tex  intro.tex  limitations.tex  ros.tex  validation.tex
docs/superpowers/plans/: 2026-06-23-prism-loc-fusion.md  2026-06-23-prism-loc.md
prism_loc/: CMakeLists.txt  package.xml
prism_loc/include/prism_loc/: localization_node.hpp
prism_loc/launch/: laser2d.launch.py  ndt3d.launch.py
prism_loc/params/: laser2d.yaml  ndt3d.yaml
prism_loc/rviz/: ndt3d.rviz  prism_loc.rviz
prism_loc/src/: laser_adapter.cpp  localization_node.cpp  main.cpp  pointcloud_adapter.cpp
prism_loc/test/: test_laser_adapter.cpp  test_tf_math.cpp
prism_loc_core/: CMakeLists.txt  package.xml
prism_loc_core/include/prism_loc_core/: bbs.hpp  measurement_model.hpp  motion_model.hpp  ndt_map.hpp  occupancy_grid.hpp  particle_filter.hpp  rng.hpp  types.hpp  version.hpp
prism_loc_core/src/: bbs.cpp  measurement_model.cpp  motion_model.cpp  ndt_map.cpp  occupancy_grid.cpp  particle_filter.cpp  types.cpp
prism_loc_core/test/: test_bbs.cpp  test_helpers.hpp  test_integration.cpp  test_measurement_laser.cpp  test_measurement_ndt.cpp  test_motion_model.cpp  test_ndt_map.cpp  test_occupancy_grid.cpp  test_particle_filter.cpp  test_rng.cpp  test_smoke.cpp  test_types.cpp
prism_loc_fusion/: CMakeLists.txt  package.xml
prism_loc_fusion/include/prism_loc_fusion/: eskf.hpp  geodetic.hpp  rng.hpp  so3.hpp  types.hpp  version.hpp
prism_loc_fusion/src/: eskf.cpp  geodetic.cpp  so3.cpp
prism_loc_fusion/test/: test_eskf.cpp  test_eskf_integration.cpp  test_geodetic.cpp  test_smoke.cpp  test_so3.cpp
prism_loc_fusion_ros/: CMakeLists.txt  package.xml
prism_loc_fusion_ros/include/prism_loc_fusion_ros/: fusion_localization_node.hpp  ndt_registration.hpp  tf_util.hpp
prism_loc_fusion_ros/launch/: fusion3d.launch.py
prism_loc_fusion_ros/params/: fusion3d.yaml
prism_loc_fusion_ros/rviz/: fusion3d.rviz
prism_loc_fusion_ros/src/: fusion_localization_node.cpp  fusion_main.cpp  ndt_registration.cpp
prism_loc_fusion_ros/test/: test_ndt_registration.cpp  test_tf_compose.cpp
