<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>prism_loc_fusion_ros</name>
  <version>0.1.0</version>
  <description>ROS 2 Humble ESKF fusion node (3D LiDAR NDT + IMU + RTK-GNSS) for prism_loc.</description>
  <maintainer email="kangjmo91@gmail.com">Kang Jung Mo</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>prism_loc_fusion</depend>
  <depend>rclcpp</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>pcl_conversions</depend>
  <depend>eigen</depend>
  <exec_depend>rviz2</exec_depend>
  <test_depend>ament_cmake_gtest</test_depend>
  <export><build_type>ament_cmake</build_type></export>
</package>
